--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 Process</button>
         </div>
     </div>
-
+    <!-- sec2 -->
     <div class="container-xl g-0 px-5">
         <div class="h1 display-5 fw-bold text-center pt-5" data-aos="fade-up" data-aos-duration="1500">
             ABOUT US
@@ -244,43 +244,53 @@
                 <div class="row row-cols-3 g-0">
                     <div class="col">
                         <a href="#"><img src="img/portfolio-img1.jpg" alt="" class="img-fluid w-100 h-100"
-                            data-aos="fade-down-right" data-aos-duration="1500" data-fancybox="gallery" data-caption="Image 1"></a>
+                                data-aos="fade-down-right" data-aos-duration="1500" data-fancybox="gallery"
+                                data-caption="Image 1"></a>
                     </div>
                     <div class="col">
-                        <a href="#"><img src="img/portfolio-img2.jpg" alt="" class="img-fluid w-100 h-100" data-aos="fade-down"
-                            data-aos-duration="1500" data-fancybox="gallery" data-caption="Image 2"></a>
+                        <a href="#"><img src="img/portfolio-img2.jpg" alt="" class="img-fluid w-100 h-100"
+                                data-aos="fade-down" data-aos-duration="1500" data-fancybox="gallery"
+                                data-caption="Image 2"></a>
                     </div>
                     <div class="col">
-                        <a href="#"><img src="img/portfolio-img3.jpg" alt="" class="img-fluid w-100 h-100" data-aos="fade-down-left"
-                            data-aos-duration="1500" data-fancybox="gallery" data-caption="Image 3"></a>
+                        <a href="#"><img src="img/portfolio-img3.jpg" alt="" class="img-fluid w-100 h-100"
+                                data-aos="fade-down-left" data-aos-duration="1500" data-fancybox="gallery"
+                                data-caption="Image 3"></a>
                     </div>
                     <div class="col">
-                        <a href="#"><img src="img/portfolio-img4.jpg" alt="" class="img-fluid w-100 h-100" data-aos="fade-right"
-                            data-aos-duration="1500" data-fancybox="gallery" data-caption="Image 4"></a>
+                        <a href="#"><img src="img/portfolio-img4.jpg" alt="" class="img-fluid w-100 h-100"
+                                data-aos="fade-right" data-aos-duration="1500" data-fancybox="gallery"
+                                data-caption="Image 4"></a>
                     </div>
                     <div class="col">
-                        <a href="#"><img src="img/portfolio-img5.jpg" alt="" class="img-fluid w-100 h-100" data-aos="flip-up"
-                            data-aos-duration="1500" data-fancybox="gallery" data-caption="Image 5"></a>
+                        <a href="#"><img src="img/portfolio-img5.jpg" alt="" class="img-fluid w-100 h-100"
+                                data-aos="flip-up" data-aos-duration="1500" data-fancybox="gallery"
+                                data-caption="Image 5"></a>
                     </div>
                     <div class="col">
-                        <a href="#"><img src="img/portfolio-img6.jpg" alt="" class="img-fluid w-100 h-100" data-aos="fade-left"
-                            data-aos-duration="1500" data-fancybox="gallery" data-caption="Image 6"></a>
+                        <a href="#"><img src="img/portfolio-img6.jpg" alt="" class="img-fluid w-100 h-100"
+                                data-aos="fade-left" data-aos-duration="1500" data-fancybox="gallery"
+                                data-caption="Image 6"></a>
                     </div>
                     <div class="col">
-                        <a href="#"><img src="img/portfolio-img7.jpg" alt="" class="img-fluid w-100 h-100" data-aos="fade-up-right"
-                            data-aos-duration="1500" data-fancybox="gallery" data-caption="Image 7"></a>
+                        <a href="#"><img src="img/portfolio-img7.jpg" alt="" class="img-fluid w-100 h-100"
+                                data-aos="fade-up-right" data-aos-duration="1500" data-fancybox="gallery"
+                                data-caption="Image 7"></a>
                     </div>
                     <div class="col">
-                        <a href="#"><img src="img/portfolio-img8.jpg" alt="" class="img-fluid w-100 h-100" data-aos="fade-up"
-                            data-aos-duration="1500" data-fancybox="gallery" data-caption="Image 8">
+                        <a href="#"><img src="img/portfolio-img8.jpg" alt="" class="img-fluid w-100 h-100"
+                                data-aos="fade-up" data-aos-duration="1500" data-fancybox="gallery"
+                                data-caption="Image 8">
                     </div></a>
                     <div class="col">
-                        <a href="#"><img src="img/portfolio-img9.jpg" alt="" class="img-fluid w-100 h-100" data-aos="fade-up-left"
-                            data-aos-duration="1500" data-fancybox="gallery" data-caption="Image 9"></a>
+                        <a href="#"><img src="img/portfolio-img9.jpg" alt="" class="img-fluid w-100 h-100"
+                                data-aos="fade-up-left" data-aos-duration="1500" data-fancybox="gallery"
+                                data-caption="Image 9"></a>
                     </div>
                 </div>
             </div>
         </div>
+        <!-- sec3 -->
         <div class="bg-white pt-3"></div>
         <div class="container-xl py-5">
             <div class="text-center">
@@ -317,6 +327,8 @@
                         </div>
                     </div>
                 </div>
+                <!-- sec4 -->
+
                 <div class="d-lg-block d-none" data-aos="flip-up" data-aos-duration="1500">
                     <div class="d-flex justify-content-center pb-5">
                         <div class="px-5 mx-5">
@@ -346,143 +358,59 @@
                     </div>
                 </div>
             </div>
-            <div class="d-block d-sm-none" data-aos="flip-left" data-aos-duration="1500">
-                <div class="col h-100">
-                    <div class="px-5">
-                        <input type="email" class="form-control rounded-0 py-2" id="exampleFormControlInput1"
-                            placeholder="Name">
-                    </div>
-                    <div class="my-3 px-5">
-                        <input type="email" class="form-control rounded-0 py-2" id="exampleFormControlInput1"
-                            placeholder="Email">
-                    </div>
-                    <div class="px-5">
-                        <input type="email" class="form-control rounded-0 py-2" id="exampleFormControlInput1"
-                            placeholder="Subject">
-                    </div>
 
-                </div>
-                <div class="col py-3 px-4 mx-4 h-100">
-                    <textarea name="Message" id="Message" cols="66" rows="6" placeholder="Message"
-                        class="form-control rounded-0"></textarea>
-                </div>
-                <div class="d-flex justify-content-center mb-5 my-3">
-                    <button class="btn btn-body rounded-0 border border-dark text-black-50 px-5 fw-semibold">SEND
-                        EMAIL</button>
-                </div>
-            </div>
-            <div class="d-lg-block d-none" data-aos="flip-up" data-aos-duration="1500">
-                <div class="d-flex justify-content-center pb-4">
-                    <div class="col-4 h-100">
-                        <div>
-                            <input type="email" class="form-control rounded-0 py-2" id="exampleFormControlInput1"
-                                placeholder="Name">
-                        </div>
-                        <div class="my-3">
-                            <input type="email" class="form-control rounded-0 py-2" id="exampleFormControlInput1"
-                                placeholder="Email">
-                        </div>
-                        <div>
-                            <input type="email" class="form-control rounded-0 py-2" id="exampleFormControlInput1"
-                                placeholder="Subject">
-                        </div>
+            <script src="js/bootstrap.bundle.min.js"></script>
+            <script src="js/aos.js"></script>
+            <script src="js/splide.min.js"></script>
+            <script src="js/fancybox.umd.js"></script>
 
-                    </div>
-                    <div class="col-4 mx-4 h-100">
-                        <textarea name="Message" id="Message" cols="66" rows="6" placeholder="Message"
-                            class="form-control rounded-0"></textarea>
-                    </div>
-                </div>
-                <div class="d-flex justify-content-center pb-5">
-                    <button class="btn btn-body rounded-0 border border-dark text-black-50 px-5 w-25 fw-semibold">SEND
-                        EMAIL</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="bg-image2 py-5 g-0">
-        <div class="container-xl py-5 my-5">
-            <div class="d-flex justify-content-center">
-                <div class="h4 fw-bold px-4">
-                    f
-                </div>
-                <div class="h4 fw-bold px-4">
-                    <i class="bi-twitter"></i>
-                </div>
-                <div class="h4 fw-bold px-4">
-                    Be
-                </div>
-                <div class="h4 fw-bold px-4">
-                    <i class="bi-globe"></i>
-                </div>
-                <div class="h4 fw-bold px-4">
-                    <i class="bi-github"></i>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="bg-dark g-0">
-        <div class="container-xl">
-            <div class="text-bg-dark py-5 h6">
-                Copyright <i class="bi-c-circle"></i> 2084 Blaster Studio
-            </div>
-        </div>
-    </div>
-
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/aos.js"></script>
-    <script src="js/splide.min.js"></script>
-    <script src="js/fancybox.umd.js"></script>
-
-    <script>
-        Fancybox.bind("[data-fancybox]", {
-            'animated': true,
-            Carousel: {
-                transition: "slide",
-            },
-            Images: {
-                zoom: false,
-            },
-            showClass: "f-fadeIn",
-        });
-    </script>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            var splide = new Splide('.splide', {
-                type: 'loop',
-                interval: 2000,
-                autoplay: true,
-                perPage: 4,
-                perMove: 1,
-                arrows: false,
-                pagination: false,
-                gap: '5rem',
-                pauseOnFocus: false,
-                pauseOnHover: false,
-                breakpoints: {
-                    991: {
-                        perPage: 3,
+            <script>
+                Fancybox.bind("[data-fancybox]", {
+                    'animated': true,
+                    Carousel: {
+                        transition: "slide",
                     },
-                    767: {
-                        perPage: 2,
+                    Images: {
+                        zoom: false,
                     },
-                    567: {
-                        perPage: 1,
-                    },
-                }
-            });
-            splide.mount();
-        });
-    </script>
+                    showClass: "f-fadeIn",
+                });
+            </script>
 
-    <script>
-        AOS.init({
-            once: true,
-        });
-    </script>
+            <script>
+                document.addEventListener('DOMContentLoaded', function () {
+                    var splide = new Splide('.splide', {
+                        type: 'loop',
+                        interval: 2000,
+                        autoplay: true,
+                        perPage: 4,
+                        perMove: 1,
+                        arrows: false,
+                        pagination: false,
+                        gap: '5rem',
+                        pauseOnFocus: false,
+                        pauseOnHover: false,
+                        breakpoints: {
+                            991: {
+                                perPage: 3,
+                            },
+                            767: {
+                                perPage: 2,
+                            },
+                            567: {
+                                perPage: 1,
+                            },
+                        }
+                    });
+                    splide.mount();
+                });
+            </script>
+
+            <script>
+                AOS.init({
+                    once: true,
+                });
+            </script>
 </body>
 
 </html>
